# hookdiff

./: .env.example  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  docker-compose.yml  hookdiff-requirements.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml
backend/endpoints/: apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/endpoints/migrations/: 0001_initial.py
backend/endpoints/tests/: test_app.py  test_list_requests.py  test_models.py  test_webhook_receiver.py
backend/hookdiff/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
backend/hookdiff/tests/: test_health.py
backend/tests/: test_create_endpoint.py  test_delete_requests.py  test_models.py  test_spa.py  test_webhook_receiver.py  test_websocket.py
frontend/: .dockerignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  sanity.test.ts
frontend/src/components/: ConnectionStatus.test.tsx  ConnectionStatus.tsx  CopyButton.test.tsx  CopyButton.tsx  DetailPanel.test.tsx  DetailPanel.tsx  DiffView.test.tsx  DiffView.tsx  EndpointBootstrap.test.tsx  EndpointBootstrap.tsx  EndpointView.test.tsx  EndpointView.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Header.tsx  JsonCode.test.tsx  JsonCode.tsx  MethodBadge.tsx  Sidebar.test.tsx  Sidebar.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/fixtures/: requests.ts
frontend/src/hooks/: useCreateEndpoint.ts  (+11 more)
(+24 files in other folders)
